objects/Pricing_Group__c.object
<CustomObject>
    <fields>
        <fullName>Compare_Excl_Incl_VAT_Prices__c</fullName>
        <formula>ISPICKVAL(Letter_Format__c, &apos;Comparative Incl VAT, VAT, Excl VAT&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Compare Excl/Incl VAT Prices</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Compare_To_Previous_Year_Prices__c</fullName>
        <formula>ISPICKVAL(Letter_Format__c, &apos;Comparative Incl VAT&apos;) || ISPICKVAL(Letter_Format__c, &apos;Comparative Excl VAT&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Compare To Previous Year Prices</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Letter_Format__c</fullName>
        <label>Letter Format</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>VAT_Inclusive__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Current Incl VAT</fullName>
                </value>
                <value>
                    <fullName>Current Excl VAT</fullName>
                </value>
                <value>
                    <fullName>Comparative Incl VAT</fullName>
                </value>
                <value>
                    <fullName>Comparative Excl VAT</fullName>
                </value>
                <value>
                    <fullName>Comparative Incl VAT, VAT, Excl VAT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Report_Sequence__c</fullName>
        <label>Report Sequence</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VAT_Inclusive__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates whether product prices listed under this pricing group include VAT.</inlineHelpText>
        <label>VAT Inclusive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VAT_Rate__c</fullName>
        <defaultValue>0.14</defaultValue>
        <label>VAT Rate</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Pricing Group</label>
    <listViews>
        <fullName>All_Pricing_Groups</fullName>
        <columns>NAME</columns>
        <columns>Report_Sequence__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Pricing Groups</label>
    </listViews>
    <nameField>
        <label>Pricing Group</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pricing Groups</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>